bau: Use builders when adding gateway account